--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "author": "jorgeasmz",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "morgan": "^1.10.0",
     "pg": "^8.8.0",
     "yup": "^0.32.11"
